[tool.poetry]
name = "fedmodal"
version = "0.1.0"
description = ""
authors = ["WilliamLindskog <williamlindskog@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
wfdb = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
